current location, permissions, and route boiler

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -34,4 +34,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBalXW7bdb97Rc8vI8Nd2FkKQxcYqqZLVQ"/>
     </application>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 </manifest>
