--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,8 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  geocoding: ^2.0.5
+  geolocator: ^9.0.1
   get: ^4.6.5
   google_maps_flutter: ^2.1.12
+  logger: ^1.1.0
+  permission_handler: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
