--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
+  http: ^0.13.5
+  google_directions_api: ^0.9.1
 
 dev_dependencies:
   flutter_test:
