--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   http: ^0.13.5
   google_directions_api: ^0.9.1
+  firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
