--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_directions_api: ^0.9.1
   google_maps_flutter: ^2.1.12
   http: ^0.13.5
+  intl: ^0.17.0
   logger: ^1.1.0
   permission_handler: ^10.0.0
   shared_preferences: ^2.0.15
