--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,4 +35,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/sampleData.json
+    - assets/streetLightData.json
     - assets/images/
