--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^1.0.0
 
 flutter:
@@ -37,3 +38,9 @@ flutter:
     - assets/sampleData.json
     - assets/streetLightData.json
     - assets/images/
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
